# Numerical-Optimization

./: CMakeLists.txt  README.md
examples/: gradient_descent.cpp
optimizer/: gradient_descent.hpp  types.hpp
